[package]
name = "btree"
version = "0.1.0"
authors = ["nshneor <nshneor@redhat.com>"]
edition = "2021"

[dependencies]
byteorder = "1.3.4"
memmap = "0.7.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
tempfile = "3"
uuid = { version = "0.8", features = ["serde", "v4"] }

[[bin]]
name = "sosd_build"
path = "src/bin/sosd_build.rs"

[[bin]]
name = "sosd_benchmark"
path = "src/bin/sosd_benchmark.rs"